--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "concurrently": "^9.1.2",
+    "sass": "^1.89.2",
     "tailwindcss": "^3.4.16"
   },
   "name": "kettik-travel",
@@ -78,7 +80,6 @@
     "resolve": "^1.22.8",
     "reusify": "^1.0.4",
     "run-parallel": "^1.2.0",
-    "sass": "^1.89.2",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
     "signal-exit": "^4.1.0",
@@ -101,7 +102,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "npx tailwindcss -i ./css/style.css -o css/output.css --watch"
+    "watch": "concurrently \"npx sass --watch css/style.scss:css/style.css\" \"npx tailwindcss -i ./css/style.css -o css/output.css --watch\""
   },
   "author": "",
   "license": "ISC"
